# adept-cmake-debug

./: .gitmodules  CMakeLists.txt
